--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
 
 <h1>Home</h1>
 <p></p>
-
+<a href="https://github.com/birlalogo/Infostav/edit/main/page.htm"><button type="button"> A button </button></a>
 </body>
 
 
