--- a/homepage.html
+++ b/homepage.html
@@ -6,9 +6,12 @@
 <body>
 
 <h1>Home</h1>
-<p></p>
-<a href="https://github.com/birlalogo/Infostav/edit/main/page.htm"><button type="button"> A button </button></a>
-</body>
+
+
+    <a href="https://github.com/birlalogo/Infostav/edit/main/page.htm"><button type="button"> A button </button></a>
+
+    <p>para</p>
+    </body>
 
 
 
