--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 <h1>Home</h1>
 
 
-    <a href="https://github.com/birlalogo/Infostav/edit/main/page.htm"><button type="button"> A button </button></a>
+    <a href="https://birlalogo.github.io/Infostav/page.htm"><button type="button"> A button </button></a>
 
     <p>para</p>
     </body>
