--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 <h1>Home</h1>
 
 
-    <a href="https://birlalogo.github.io/Infostav/page.htm"><button type="button"> A button </button></a>
+    <button type="button"> <a href="https://birlalogo.github.io/Infostav/page.htm">A button </a></button>
 
     <p>para</p>
     </body>
